# spider

./: .clang-format  .gitignore  Makefile.am  README  TODO  configure.ac  index.html  test.txt
lib/: json.hpp
src/: main.cc  main.hh
src/config/: config.cc  config.hh
src/config/.deps/: spider-config.Po
src/events/: callbacks.cc  callbacks.hh  event-loop.cc  event-loop.hh  events.cc  events.hh  listener.cc  listener.hh  recv-body.hh  recv-header.hh  recv.cc  recv.hh  recvResponse.cc  recvResponse.hh  register.cc  register.hh  send-response.hh  sendRequest.cc  sendRequest.hh  sendv.cc  sendv.hh  timer.cc  timer.hh
src/events/.deps/: spider-event-loop.Po  spider-events.Po  spider-listener.Po  spider-register.Po
src/misc/: fd.cc  fd.hh  socket.hh  unistd.hh
src/misc/.deps/: spider-fd.Po
src/misc/addrinfo/.deps/: spider-addrinfo-error.Po  spider-addrinfo.Po
src/parsing/: json.cc  json.hh
src/request/: request.cc  request.hh  response.cc  response.hh  types.hh
src/request/.deps/: response.Tpo  spider-error.Po  spider-request.Po  spider-response.Po
src/socket/: default-socket.cc  default-socket.hh  socket.cc  socket.hh  ssl-socket.cc  ssl-socket.hh
src/socket/.deps/: spider-default-socket.Po  spider-socket.Po
src/time/: timeout.hh
src/vhost/: connection.cc  connection.hh  dispatcher.cc  dispatcher.hh  vhost-factory.cc  vhost-factory.hh  vhost-static-file.cc  vhost-static-file.hh  vhost.cc  vhost.hh
src/vhost/.deps/: spider-connection.Po  spider-dispatcher.Po  spider-vhost-factory.Po
tests/: Makefile.am  README  launch_testsuite.sh  testsuite.py
tests/configs/: buggyconf1.json  buggyconf2.json  buggyconf3.json  buggyconf4.json  buggyconf5.json  conf1.json  conf11.json  conf3.json  conf4.json  conf5.json  hello.html  mult_vhosts_conf.json  mult_vhosts_err1_conf.json  mult_vhosts_err2_conf.json  mult_vhosts_err3_conf.json  perm.html  perm_error.html  proxy1.json  proxy2.json  test.json  test1.txt
tests/old_testsuite/: old_Makefile.am  old_testsuite.py
tests/old_testsuite/unitary_tests/: main_options.cc  parse_config.cc
tests/unitary_tests/: request_test.cc
